# libvips

./: .gitmodules  CMakeLists.txt
libvips/: CMakeLists.txt
libvips/colour/: CMakeLists.txt
libvips/conversion/: CMakeLists.txt
libvips/foreign/: CMakeLists.txt
libvips/histogram/: CMakeLists.txt
